07-microservices-node-react/01-blog/infra/k8s/client-depl.yaml
# kubectl rollout restart deployment [depl_name]

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: sebastiansloniec/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP # Default
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
