07-microservices-node-react/01-blog/infra/k8s/event-bus-depl.yaml
# kubectl rollout restart deployment [depl_name]

apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
  labels:
    app: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: sebastiansloniec/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP # Default
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
