07-microservices-node-react/01-blog/infra/k8s/moderation-depl.yaml
# kubectl rollout restart deployment [depl_name]

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
  labels:
    app: moderation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: sebastiansloniec/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP # Default
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
