07-microservices-node-react/01-blog/infra/k8s/posts-depl.yaml
# kubectl rollout restart deployment [depl_name]

apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: sebastiansloniec/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: ClusterIP # Default
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
