07-microservices-node-react/01-blog/infra/k8s/query-depl.yaml
# kubectl rollout restart deployment [depl_name]

apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: sebastiansloniec/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP # Default
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
